[package]
name = "ava-avm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "X-Chain (AVM): asset-exchange UTXO chain — txs, fx dispatch (secp256k1fx/nftfx/propertyfx), state, linearized blocks, atomic X↔P/X↔C (port of vms/avm) (M5 / specs 09)."

[dependencies]
ava-types = { path = "../ava-types" }
ava-codec = { path = "../ava-codec" }
ava-codec-derive = { path = "../ava-codec-derive" }
# sha256 of the signed bytes → tx_id / gossip id (specs 09 §3.1); first consumed
# by the M5.5 `Tx::initialize` byte derivation.
ava-crypto = { path = "../ava-crypto" }
# avax UTXO components (BaseTx, TransferableInput/Output, Asset, UtxoId, sort
# helpers) + `verify::State`/`Verifiable`, shared with the P-Chain (specs 09 §3,
# 07 §3.1); first consumed by the M5.2 tx model.
ava-vm = { path = "../ava-vm" }
# secp256k1fx Input/OutputOwners/Credential/TransferInput/TransferOutput embedded
# as the base fx (specs 09 §4.1); nft/property credentials embed secp's Credential.
ava-secp256k1fx = { path = "../ava-secp256k1fx" }
# `clock::Clock` — the injectable time source threaded into the secp fx adapter
# (`SecpFx::new`, specs 09 §4.1 / 24); shared with `ava-secp256k1fx::Fx::new`.
ava-utils = { path = "../ava-utils" }
# Zero-copy cached signed/unsigned tx bytes (specs 09 §3.1 Tx.bytes); first
# consumed by the M5.5 Tx envelope.
arc-swap = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# UTXO/tx/block/singleton state stores: VersionDb over base + five PrefixDb
# sub-stores + the Diff layer (specs 09 §5); consumed by the M5.10 `state` module.
ava-database = { path = "../ava-database" }
# The engine-facing `Block` trait (verify/accept/reject) + `ChainContext` /
# `EngineState` the VM (M5.19) returns/consumes are owned by `ava-snow`.
ava-snow = { path = "../ava-snow" }
# `network_upgrades` (`UpgradeConfig`) carried on the `ChainContext` (M5.19).
ava-version = { path = "../ava-version" }
# The VM assembly (M5.19): async trait impls, the engine cancellation token, the
# shared mempool guard, and the JSON `config_bytes` parse.
async-trait = { workspace = true }
tokio-util = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# NOTE (as-built): `ava-api` does not exist yet (served via M8/M12). See plan/M5.

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
hex = { workspace = true }
# The generic VM-conformance battery (`vm_conformance!`, 07 §10) + the async
# runtime the battery's `#[tokio::test]`s and the M5.19 unit tests run on.
ava-vm = { path = "../ava-vm", features = ["testutil"] }
tokio = { workspace = true }

[lints]
workspace = true
