load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "ava_chains",
    srcs = [
        "src/aliaser.rs",
        "src/atomic/mod.rs",
        "src/atomic/shared_memory.rs",
        "src/create_chain.rs",
        "src/error.rs",
        "src/lib.rs",
        "src/manager.rs",
        "src/registry.rs",
        "src/subnet.rs",
    ],
    compile_data = ["Cargo.toml"],
    proc_macro_deps = ["@crates//:async-trait"],
    visibility = ["//visibility:public"],
    deps = [
        "//crates/ava-codec:ava_codec",
        "//crates/ava-crypto:ava_crypto",
        "//crates/ava-database:ava_database",
        "//crates/ava-engine:ava_engine",
        "//crates/ava-proposervm:ava_proposervm",
        "//crates/ava-snow:ava_snow",
        "//crates/ava-types:ava_types",
        "//crates/ava-utils:ava_utils",
        "//crates/ava-validators:ava_validators",
        "//crates/ava-version:ava_version",
        "//crates/ava-vm:ava_vm",
        "@crates//:prometheus",
        "@crates//:serde_json",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-util",
    ],
)

rust_test(
    name = "differential_testvm",
    srcs = [
        "tests/differential_testvm.rs",
        "tests/support/mod.rs",
    ],
    compile_data = ["Cargo.toml"],
    crate_root = "tests/differential_testvm.rs",
    proc_macro_deps = ["@crates//:async-trait"],
    visibility = ["//visibility:public"],
    deps = [
        ":ava_chains",
        "//crates/ava-codec:ava_codec",
        "//crates/ava-crypto:ava_crypto",
        "//crates/ava-database:ava_database",
        "//crates/ava-engine:ava_engine",
        "//crates/ava-proposervm:ava_proposervm",
        "//crates/ava-snow:ava_snow",
        "//crates/ava-types:ava_types",
        "//crates/ava-utils:ava_utils",
        "//crates/ava-validators:ava_validators",
        "//crates/ava-version:ava_version",
        "//crates/ava-vm:ava_vm",
        "@crates//:assert_matches",
        "@crates//:prometheus",
        "@crates//:proptest",
        "@crates//:rcgen",
        "@crates//:ring",
        "@crates//:rustls-pemfile",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-util",
    ],
)

rust_test(
    name = "manager",
    srcs = ["tests/manager.rs"],
    compile_data = ["Cargo.toml"],
    proc_macro_deps = ["@crates//:async-trait"],
    visibility = ["//visibility:public"],
    deps = [
        ":ava_chains",
        "//crates/ava-codec:ava_codec",
        "//crates/ava-crypto:ava_crypto",
        "//crates/ava-database:ava_database",
        "//crates/ava-engine:ava_engine",
        "//crates/ava-proposervm:ava_proposervm",
        "//crates/ava-snow:ava_snow",
        "//crates/ava-types:ava_types",
        "//crates/ava-utils:ava_utils",
        "//crates/ava-validators:ava_validators",
        "//crates/ava-version:ava_version",
        "//crates/ava-vm:ava_vm",
        "@crates//:assert_matches",
        "@crates//:prometheus",
        "@crates//:proptest",
        "@crates//:rcgen",
        "@crates//:ring",
        "@crates//:rustls-pemfile",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-util",
    ],
)

rust_test(
    name = "pipeline",
    srcs = [
        "tests/pipeline.rs",
        "tests/support/mod.rs",
    ],
    compile_data = ["Cargo.toml"],
    crate_root = "tests/pipeline.rs",
    proc_macro_deps = ["@crates//:async-trait"],
    visibility = ["//visibility:public"],
    deps = [
        ":ava_chains",
        "//crates/ava-codec:ava_codec",
        "//crates/ava-crypto:ava_crypto",
        "//crates/ava-database:ava_database",
        "//crates/ava-engine:ava_engine",
        "//crates/ava-proposervm:ava_proposervm",
        "//crates/ava-snow:ava_snow",
        "//crates/ava-types:ava_types",
        "//crates/ava-utils:ava_utils",
        "//crates/ava-validators:ava_validators",
        "//crates/ava-version:ava_version",
        "//crates/ava-vm:ava_vm",
        "@crates//:assert_matches",
        "@crates//:prometheus",
        "@crates//:proptest",
        "@crates//:rcgen",
        "@crates//:ring",
        "@crates//:rustls-pemfile",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-util",
    ],
)

rust_test(
    name = "ava_chains_test",
    compile_data = ["Cargo.toml"],
    crate = ":ava_chains",
    deps = [
        "@crates//:assert_matches",
        "@crates//:proptest",
        "@crates//:rcgen",
        "@crates//:ring",
        "@crates//:rustls-pemfile",
        "@crates//:sha2",
        "@crates//:tokio",
    ],
)
