[package]
name = "ava-codec-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Derive macro (#[derive(AvaCodec)]) for the ava-codec linear codec (M0.15 / specs 03 §2.5)."

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
