load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "ava_codec",
    srcs = [
        "src/codectest.rs",
        "src/error.rs",
        "src/lib.rs",
        "src/linearcodec.rs",
        "src/manager.rs",
        "src/packer.rs",
    ],
    compile_data = ["Cargo.toml"],
    proc_macro_deps = ["//crates/ava-codec-derive:ava_codec_derive"],
    visibility = ["//visibility:public"],
)
