[package]
name = "ava-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Hand-written byte-exact linear codec (Packer + Manager + linearcodec registry) (M0 / specs 03 §2)."

# Dependency direction (specs/03 §0): ava-codec depends only on ava-types
# primitive newtypes (+ the derive macro). It does NOT depend on ava-crypto.
[dependencies]
ava-types = { path = "../ava-types" }
ava-codec-derive = { path = "../ava-codec-derive" }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
criterion = { workspace = true }

[features]
# `testutil` exposes the generic codec conformance suite (codectest analogue).
testutil = [  ]

# Critical-path bench for `cargo xtask bench-guard` (specs/02 §9): Packer
# encode/decode round-trip.
[[bench]]
name = "codec"
harness = false
